<resources>
    <string name="no_wifi_notification_title_text">当前非WIFI模式，注意流量</string>
    <string name="no_wifi_notification_content_text">在线看视频资源比较耗费流量</string>
    <string name="app_name">形考</string>
    <string name="app_display_text">福建电大形考</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="exit_hint">再按一次退出</string>
    <string name="please_open_network">网络不可用</string>
    <string name="network_ungeilivable">网络不给力啊!</string>
    <string name="request_success">操作成功</string>
    <string name="request_error">操作失败</string>
    <string name="param_error">参数错误</string>
    <string name="record_not_exist">记录不存在</string>
    <string name="db_operation">数据库操作</string>
    <string name="system_error">系统错误</string>
    <string name="api_error">数据获取失败</string>
    <string name="net_error">网络不给力</string>
    <string name="net_error_or_api_error">网络异常或远程接口出错</string>
    <string name="net_error_tip">网络请求异常，请稍候再试！</string>
    <string name="login_code_error">登录失败,请稍后再试</string>
    <string name="login_enter_username">请输入用户名</string>
    <string name="login_enter_password">请输入密码</string>
    <string name="login_enter_username_and_password">账号或密码为空</string>
    <string name="login_username_or_password_error">账号或密码错误</string>
    <string name="login_username_format_error">用户名为1&#8211;80个字符</string>
    <string name="login_password_format_error">密码只能包含字母、数字，区分大小写</string>
    <string name="login_id_not_exist_error">该账号不存在，请重新输入</string>
    <string name="login_can_not_read_user_info_error">获取不到学生的报名信息</string>
    <string name="login_id_not_publish_error">该学生的学号还没有发布</string>
    <string name="login_loading_text">登录中...</string>
    <string name="verification_hint">请输入验证码</string>
    <string name="verification_error">验证码错误！</string>
    <string name="add">添加</string>
    <string name="finished">已完成</string>
    <string name="login">登录</string>
    <string name="more">更多</string>
    <string name="all_course_text">所有课程</string>
    <string name="course_title">课堂</string>
    <string name="no_play_history">暂无播放历史</string>
    <string name="no_study_course">暂无在修课程</string>
    <string name="check_all_study_resource_tip">查看全部学习资源</string>
    <string name="check_all_study_resource_title">学习资源</string>
    <string name="check_by_specialty">按专业查看</string>
    <string name="check_all_specialty_title">全部专业</string>
    <string name="no_local_courseware">您还没有下载课件，可以去课程列表中选择课件下载</string>
    <string name="no_course">暂无课程</string>
    <string name="no_more_record">没有更多课程</string>
    <string name="watch_to_text">看到：</string>
    <string name="no_records_tip">没记录</string>
    <string name="no_net_click_tip">点击屏幕，重新加载</string>
    <string name="download_text">下载管理</string>
    <string name="download_tip_text">你暂时没有下载过课件</string>
    <string name="download_tip2_text">可以进入课程页面或在视频页面将课件下载到本地</string>
    <string name="msg_net_error">网络连接失败，请检查您的网络状态</string>
    <string name="msg_reconnect">重新登录</string>
    <string name="msg_connect_error">消息IM连接失败</string>
    <string name="msg_connect_pwd_error">消息IM密码错误</string>
    <string name="msg_can_not_be_null">不能发送空白消息</string>
    <string name="msg_head">消息</string>
    <string name="msg_offline">离线</string>
    <string name="msg_online">在线</string>
    <string name="msg_hidden">隐身</string>
    <string name="msg_linking">连接中&#8230;</string>
    <string name="msg_getting">收取中&#8230;</string>
    <string name="msg_communication_list">通讯录</string>
    <string name="msg_notice">系统公告</string>
    <string name="msg_reminder">我的提醒</string>
    <string name="msg_news_friend">新的朋友</string>
    <string name="msg_friend">我的好友</string>
    <string name="msg_group">我的群组</string>
    <string name="msg_my_care">我的关注</string>
    <string name="msg_my_fans">新的朋友</string>
    <string name="msg_send">发送</string>
    <string name="msg_have_requested">已请求</string>
    <string name="msg_have_added">已添加</string>
    <string name="msg_no_followers">暂无关注列表</string>
    <string name="msg_no_fans">暂无粉丝列表</string>
    <string name="msg_no_friends">暂无好友列表</string>
    <string name="msg_no_students">该班级暂无学生</string>
    <string name="msg_connecting_tip_text">当前离线状态，正在登录中...</string>
    <string name="msg_offline_tip_text">当前用户已掉线，请重新登录</string>
    <string name="notice_list_empty">暂无系统公告</string>
    <string name="notice_list_activity_title">系统公告</string>
    <string name="notice_show_detail">查看详情</string>
    <string name="notice_detail_activity_title">公告详情</string>
    <string name="notice_have_been_deleted">该条公告已被删除或不存在</string>
    <string name="remind_my_activity_title">我的提醒</string>
    <string name="remind_exam">考试</string>
    <string name="remind_online_lession">网上教学</string>
    <string name="remind_select_lession">选课</string>
    <string name="remind_no_exam">免修免考</string>
    <string name="remind_exam_list_activity_title">考试提醒</string>
    <string name="error_set">错题集</string>
    <string name="no_homework">暂无作业</string>
    <string name="redo_homework">重新作答</string>
    <string name="highest_score">成绩：</string>
    <string name="current_score">本次得分:</string>
    <string name="no_finished_homework">暂无已完成作业</string>
    <string name="finished_work">已完成作业</string>
    <string name="time_based">按截止日期</string>
    <string name="course_based">按课程</string>
    <string name="from">来源：</string>
    <string name="is_to_commit">待提交</string>
    <string name="is_to_correct">待批改</string>
    <string name="is_out_of_date">已过期</string>
    <string name="deadline">截止时间：</string>
    <string name="problem_types">题型总览：</string>
    <string name="start_test">开始答题</string>
    <string name="commit_test">提交作业</string>
    <string name="continue_test">继续答题</string>
    <string name="last_problem">上一题</string>
    <string name="next_problem">下一题</string>
    <string name="progress">进度</string>
    <string name="answer">答题</string>
    <string name="commit">交卷</string>
    <string name="do_wrong">做错</string>
    <string name="not_done">未做</string>
    <string name="fucking_genius">天才，你已经拿满分了！</string>
    <string name="no_more_chance">很遗憾，答题次数已满</string>
    <string name="empty_work_list">题目列表为空</string>
    <string name="committed_at">于{0}分提交作业</string>
    <string name="xk_commit">提交</string>
    <string name="xk_reject">已退回</string>
    <string name="xk_has_commited">已提交</string>
    <string name="xk_reject_detail">退回详情</string>
    <string name="xk_cancel_commit">撤销提交</string>
    <string name="xk_has_correct">已评阅</string>
    <string name="xk_correcting">正在评阅</string>
    <string name="xk_start_task">开始任务</string>
    <string name="xk_check_detail">查看详情</string>
    <string name="xk_answer_sheet">答题卡</string>
    <string name="redo_error_question">错题重做</string>
    <string name="no_error_question">恭喜，你没有答错的题目！</string>
    <string name="xk_commit_test">提交考试</string>
    <string name="xk_continue_test">继续考试</string>
    <string name="xk_redo_test">重新考试</string>
    <string name="xk_start_test">开始考试</string>
    <string name="xk_no_record">暂无记录</string>
    <string name="xk_no_task">暂无可做的形考任务</string>
    <string name="xk_not_start">未开始</string>
    <string name="go_course_list">去课程列表</string>
    <string name="local_ppt">本地课件</string>
    <string name="import_ppt">导入课件</string>
    <string name="already_have_ppt">本机已有课件:</string>
    <string name="save">保存</string>
    <string name="play">播放</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="select_all">全选</string>
    <string name="full_screen">全屏</string>
    <string name="course_introduction">课程简介</string>
    <string name="course_list">课件列表</string>
    <string name="course_answers">课程答疑</string>
    <string name="seminar_section">辅导讨论区</string>
    <string name="question_reply">提问回复</string>
    <string name="my_question">我的提问</string>
    <string name="raise_question">发起提问</string>
    <string name="do_test">做测试</string>
    <string name="do_homework">做作业</string>
    <string name="download">下载</string>
    <string name="score">学分：</string>
    <string name="period">课时：</string>
    <string name="student_num">在修学员数：</string>
    <string name="head_teacher">责任老师：</string>
    <string name="course_teacher">课程讲师：</string>
    <string name="already_download">已下载</string>
    <string name="courseware_downloading">下载中</string>
    <string name="waiting">等待中</string>
    <string name="click_play">点击播放：</string>
    <string name="videoview_loading">努力加载中...</string>
    <string name="current_play_rate1">已看至</string>
    <string name="current_play_rate2">，即将为你继续播放</string>
    <string name="ready_to_play">即将开始播放</string>
    <string name="no_courseware">暂无课件！</string>
    <string name="no_questions">暂无答疑！</string>
    <string name="no_course_description">暂无课程简介。</string>
    <string name="course_get_url_failed">课件获取失败</string>
    <string name="major_levels">学业层次:</string>
    <string name="major_year">学制:</string>
    <string name="major_graduate_credit">毕业所需学分:</string>
    <string name="major_educational_credit">学历所需学分:</string>
    <string name="major_year_util">年</string>
    <string name="major_credit_util">分</string>
    <string name="major_introduction">专业简介</string>
    <string name="major_rule">专业规则</string>
    <string name="major_rule_name">专业模块</string>
    <string name="major_rule_graduate_credit">毕业要求学分</string>
    <string name="major_rule_educational_credit">学历要求学分</string>
    <string name="major_course">专业课程</string>
    <string name="major_cost">收费标准</string>
    <string name="major_cost_value">注册建档费用：{0}元\n\n选课费用：{1}元/学分</string>
    <string name="video_bar_total_time"> 00:00:00</string>
    <string name="video_bar_speed">432KB/S</string>
    <string name="video_bar_sound">声音</string>
    <string name="video_bar_back">快退</string>
    <string name="video_bar_next">快进</string>
    <string name="video_bar_play">播放</string>
    <string name="click_to_play">点击播放：</string>
    <string name="null_path">暂无课件！</string>
    <string name="settings_dialog_check_update">检查更新</string>
    <string name="settings_dialog_wait">请稍等……</string>
    <string name="settings_dialog_update_version">开放大学已发布了新版本！</string>
    <string name="settings_dialog_update_certain">立即更新</string>
    <string name="settings_dialog_update_download_fail">下载失败!</string>
    <string name="settings_dialog_update_download_fail_no_sdcard">您没有SD卡，下载失败!</string>
    <string name="settings_no_sd_card">您没有SD卡</string>
    <string name="settings_dialog_update_cancel">以后再说</string>
    <string name="settings_dialog_update_no_update">已经是最新版本啦!</string>
    <string name="settings_dialog_check_fail">检查更新出错</string>
    <string name="settings_dialog_update_ok">OK</string>
    <string name="version_updating">努力更新中……</string>
    <string name="fj_open_university">福建开放大学</string>
    <string name="official_site">官方网站：new.fjou.cn</string>
    <string name="orgnizer">主办单位：</string>
    <string name="tech_support">技术支持：福建华渔教育科技有限公司</string>
    <string name="about_copyright">Copyright © 2015 new.fjou.cn</string>
    <string name="about_version">(Android版V2.0.0 Beta)</string>
    <string name="sure">确定</string>
    <string name="binding_et_hint1">请输入要绑定的手机号码</string>
    <string name="not_binding">你还没有绑定手机，绑定手机号可以用于找回密码</string>
    <string name="sending_msg">为了验证你的身份，我们将会给你发送短信验证码</string>
    <string name="binding_to_find_code">绑定手机号可以用于找回密码</string>
    <string name="search_by_all">搜全部</string>
    <string name="search_by_specialty">搜专业</string>
    <string name="search_by_user">搜用户</string>
    <string name="search_by_course">搜课程 </string>
    <string name="search_by_pub">搜内容</string>
    <string name="search_course_lecturer">课程讲师：</string>
    <string name="search_course_credits">学费：</string>
    <string name="search_specialty_years">年限：</string>
    <string name="coach_topic_top">置顶</string>
    <string name="coach_topic_update">修改主贴</string>
    <string name="coach_topic_delete">删除主贴</string>
</resources>