<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popmenu_reverse" >
    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pop_item_height"
        android:background="@drawable/pop_item_selector"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/white"
        android:layout_marginTop="1dp"
        android:text="@string/play"/>
	<Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pop_item_height"
        android:background="@drawable/pop_item_selector"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/white"
        android:layout_marginTop="1dp"
        android:text="@string/delete"/>
	<Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pop_item_height"
        android:background="@drawable/pop_item_selector"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/white"
        android:layout_marginTop="1dp"
        android:text="@string/share"/>
</LinearLayout>
