<?xml version="1.0" encoding="utf-8"?>
<!-- 关于界面 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    <include 
        android:id="@+id/about_head"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_head_layout_1"/>
    <RelativeLayout 
        android:id="@+id/about_icon_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_head"
        android:layout_marginTop="50dp">
        <ImageView 
            android:id="@+id/about_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_open1"
            android:layout_centerHorizontal="true"/>
        <TextView 
            android:id="@+id/about_ou_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fj_open_university"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:layout_below="@+id/about_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
        <TextView 
            android:id="@+id/about_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:textSize="15dp"
            android:textColor="@color/light_black"
            android:layout_below="@+id/about_ou_tv"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <View 
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/about_icon_rl"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/line_bg"/>
    
    <TextView 
        android:id="@+id/offical_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/line1"
        android:textSize="18dp"
        android:text="@string/official_site"/>
    
    <View 
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/offical_site"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/line_bg"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:textColor="@color/light_black"
	            android:text="@string/orgnizer"/>
            <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:textColor="@color/light_black"
	            android:text="@string/fj_open_university"/>
        </LinearLayout>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/light_black"
            android:text="@string/tech_support"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="@color/light_black"
            android:text="@string/about_copyright"/>
    </LinearLayout>

</RelativeLayout>
